--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,6 +10,7 @@
 @import "basic/size.scss";
 @import "basic/tables.scss";
 @import "basic/images.scss";
+@import "tabs/tabs.scss";
 
 // @import "keyframes/keyframes.scss";
 // @import "keyframes/animations.scss";
