--- a/styles/basic/images.scss
+++ b/styles/basic/images.scss
@@ -1,4 +1,19 @@
+#actor_img_div {
+   width: 225px;
+   height: 225px;
+   margin-top: auto;
+   margin-bottom: auto;
+   overflow: hidden;
+}
 #actor_img {
-   width: 200px;
-   height: 200px;
+   width: 225px;
+   height: 225px;
+}
+#clan-images img {
+   width: 125px;
+   height: 125px;
+   margin-top: auto;
+   margin-bottom: auto;
+   border: none;
+   outline: none;
 }
