--- a/styles/basic/size.scss
+++ b/styles/basic/size.scss
@@ -1,3 +1,10 @@
+.w-auto {
+   width: auto;
+}
+.w-full {
+   width: 100%;
+}
+
 .w-20px {
    width: 20px;
 }
@@ -30,4 +37,8 @@
 
 .h-auto {
    height: auto;
+}
+
+.h-full {
+   height: 100%;
 }
