--- a/templates/actors/characters/character-sheet.hbs
+++ b/templates/actors/characters/character-sheet.hbs
@@ -79,7 +79,7 @@
             </div>
             <div class="flex justify-between w-full align-center my-5 px-4">
 
-                  <button class="roll-dice mr-3" data-name="stamina" data-value="{{data.traits.stamina}}" data-roll-type="trait">{{localize "l5r4ec.traits.stamina"}}</button>
+                  <button class="roll-dice mr-3 w-100" data-name="stamina" data-value="{{data.traits.stamina}}" data-roll-type="trait">{{localize "l5r4ec.traits.stamina"}}</button>
 
                <div id="traits-inputs-earth">
                      <input
@@ -95,7 +95,7 @@
                
             </div>
             <div class="flex justify-between w-full align-center my-5 px-4">
-               <button class="roll-dice mr-3" data-name="willpower" data-value="{{data.traits.willpower}}" data-roll-type="trait">{{localize "l5r4ec.traits.willpower"}}</button>
+               <button class="roll-dice mr-3 w-100" data-name="willpower" data-value="{{data.traits.willpower}}" data-roll-type="trait">{{localize "l5r4ec.traits.willpower"}}</button>
                   
                
                <div id="traits-inputs-earth">
@@ -125,7 +125,7 @@
       />
    </div>
    <div class="flex justify-between w-full align-center my-5 px-4">
-      <button class="roll-dice mr-3" data-name="strength" data-value="{{data.traits.strength}}" data-roll-type="trait">{{localize "l5r4ec.traits.strength"}}</button>
+      <button class="roll-dice mr-3 w-100" data-name="strength" data-value="{{data.traits.strength}}" data-roll-type="trait">{{localize "l5r4ec.traits.strength"}}</button>
       <div id="traits-inputs-water">
          <input
             type="number"
@@ -139,7 +139,7 @@
       </div>
    </div>
    <div class="flex justify-between w-full align-center my-5 px-4">
-      <button class="roll-dice mr-3" data-name="perception" data-value="{{data.traits.perception}}" data-roll-type="trait">{{localize "l5r4ec.traits.perception"}}</button>
+      <button class="roll-dice mr-3 w-100" data-name="perception" data-value="{{data.traits.perception}}" data-roll-type="trait">{{localize "l5r4ec.traits.perception"}}</button>
          
       
       <div id="traits-inputs-water">
@@ -363,7 +363,7 @@
                      />
                   </div>
                
-               <button class="roll-dice mr-3" data-name="reflexes" data-value="{{data.traits.reflexes}}" data-roll-type="trait">{{localize "l5r4ec.traits.reflexes"}}</button>
+               <button class="roll-dice mr-3 w-100" data-name="reflexes" data-value="{{data.traits.reflexes}}" data-roll-type="trait">{{localize "l5r4ec.traits.reflexes"}}</button>
             </div>
             <div class="flex justify-between w-full align-center my-5 px-4">
                <div id="traits-inputs-air">
@@ -378,7 +378,7 @@
                      />
                   </div>
                
-               <button class="roll-dice mr-3" data-name="awareness" data-value="{{data.traits.awareness}}" data-roll-type="trait">{{localize "l5r4ec.traits.awareness"}}</button>
+               <button class="roll-dice mr-3 w-100" data-name="awareness" data-value="{{data.traits.awareness}}" data-roll-type="trait">{{localize "l5r4ec.traits.awareness"}}</button>
                   
             </div>
          </div>
@@ -407,7 +407,7 @@
                         placeholder="0"
                      />
                </div>
-               <button class="roll-dice mr-3" data-name="agility" data-value="{{data.traits.agility}}" data-roll-type="trait">{{localize "l5r4ec.traits.agility"}}</button>
+               <button class="roll-dice mr-3 w-100" data-name="agility" data-value="{{data.traits.agility}}" data-roll-type="trait">{{localize "l5r4ec.traits.agility"}}</button>
                   
             </div>
             
@@ -424,7 +424,7 @@
                      />
                   </div>
                
-               <button class="roll-dice mr-3" data-name="intelligence" data-value="{{data.traits.intelligence}}" data-roll-type="trait">{{localize "l5r4ec.traits.intelligence"}}</button>
+               <button class="roll-dice mr-3 w-100" data-name="intelligence" data-value="{{data.traits.intelligence}}" data-roll-type="trait">{{localize "l5r4ec.traits.intelligence"}}</button>
                 
             </div>
          </div>
@@ -482,6 +482,41 @@
 </div>
 <div id="char_tab3" class="char_tab-content" style="display:none;">
     Compétences
+
+   <div>
+      high skills
+      <!-- for each skill in high skill display the rank of the skill, the name of the skill, the stat used and a button to roll-->
+      {{#each data.skills.high as |skill|}}
+         <div class="flex flex-row">
+            <div class="flex flex-col">
+               
+               <input
+                  class="select-on-focus"
+                  type="text"
+                  name="data.skills.high.{{@index}}"
+                  value="{{skill}}"
+                  data-type="String"
+                  placeholder="name"
+               />
+            </div>
+
+            <div class="flex flex-col">
+               <p for="data.skills.high.{{@index}}">{{localize "l5r4ec.skills.high.{{skill}}"}}</p>
+              
+            </div>
+
+            <div class="flex flex-col">
+              <!-- make a select with all the traits and rings-->
+              
+            </div>
+
+            <div class="flex flex-col">
+               <button class="roll-dice mr-3" data-roll-type="skill">{{skill}}</button>
+            </div>
+         </div>
+      {{/each}}
+   </div>
+
 </div>
 <div id="char_tab4" class="char_tab-content" style="display:none;">
    <table>
