--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -1,17 +1,23 @@
 /* text colors */
 
-/* Rings */
+/* Rings 
 $water-ring: #5f919b;
 $earth-ring: #699678;
 $fire-ring: #9b7350;
 $air-ring: #917896;
 $void-ring: #4b4641;
+*/
+$water-ring: #67a9b6;
+$earth-ring: #5c9c72;
+$fire-ring: #bd8350;
+$air-ring: #9e6ea8;
+$void-ring: #2c2b27;
 
 /* clan colors */
 $crab: #292768;
 $crane: #68c2d4;
 $dragon: #55826e;
-$lion: #d9c23e;
+$lion: #af9e3a;
 $phoenix: #ff8b01;
 $scorpion: #a33e3e;
 $unicorn: #742074;
